feat: addressByCondition and BuildBitmapListWithCntResponse
